Update PokedexImplementation.java